más resoluciones/correcciones