@@ -1,43 +1,33 @@
 package practica1.ejercicio8;
 import java.util.LinkedList;
-public class Queue {
-	private LinkedList<Integer> lista;
+public class Queue <T> {
+	private LinkedList<T> lista;
 	
 	//Constructor
 	public Queue() {
 		lista = new LinkedList<>();
-		lista.add(1);
-		lista.add(2);
-		lista.add(3);
-		lista.add(4);
-		lista.add(5);
 	}
 	//Inserta el elemento al final de la cola
-	public void enqueue(int dato) {
+	public void enqueue(T dato) {
 		lista.add(dato);
 	}
+
 	//Elimina el elemento del frente de la cola
-	public int dequeue() {
-		if (lista.isEmpty()) {
-			System.out.println("Esta vacía");
-			return -1;
-		}
-		return lista.remove(0);
+	public T dequeue() {
+		return lista.removeFirst();
 	}
 	//Retorna el elemento del frente de la cola
-	public int head() {
-		if (lista.isEmpty()) {
-			System.out.println("Esta vacía");
-			return -1;
-		}
-		return lista.get(0);
+	public T head() {
+		return lista.getFirst();
 	}
 	//Verdadero si esta vacía, Falso si no
 	public boolean isEmpty() {
+
 		return lista.isEmpty();
 	}
 	//Cantidad de elementos de la cola
 	public int size() {
+
 		return lista.size();
 	}
 	@Override
@@ -45,8 +35,8 @@ public class Queue {
 	public String toString() {
 		return lista.toString();
 	}
-	
-	public LinkedList<Integer> devolverLista(){
-		return this.lista;
+
+	public LinkedList<T> getLista(){
+		return lista;
 	}
 }
